flapivor/tests/m3/hopix/typechecker/good/43-pattern-matching-07.hopix
type Or<a, b> = Left(a) | Right(b)

val x : Int = case Left<Int, Int>(22) {
  Left<Int, Int>(x : Int) | Right<Int, Int>(x : Int) => x
}