flapivor/tests/m3/hopix/typechecker/bad/56-constructor-matching-04.hopix
type T = A (Int, Int)

val main : Int = case A<>(1, 2) { A<>(x : Int, x : Int) => x }